--- a/Kelompok_01-Komputasi_Literature_Review_Metode_Penelitian.ipynb
+++ b/Kelompok_01-Komputasi_Literature_Review_Metode_Penelitian.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"img/Gambar Covid-19 Tolong gabunging ama Corona Virus Study Literature.ipynb.png\">"
+    "<img src=\"images/peta konsep Covid-19 Kelompok 1 komputasi.png\">"
    ]
   },
   {
