--- a/Kelompok_01-Komputasi_Literature_Review_Metode_Penelitian.ipynb
+++ b/Kelompok_01-Komputasi_Literature_Review_Metode_Penelitian.ipynb
@@ -4,6 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Tugas Metode Penelitian - Literature Review\n",
+    "## Kelompok 1 Komputasi\n",
+    "\n",
+    "Anggota Kelompok:\n",
+    "- Fathu Rahman (11170940000028)\n",
+    "- Yulia Amandari (11170940000041)\n",
+    "- Reza Khaerul I (11170940000044)\n",
+    "- Ivansyah (11170940000047)\n",
+    "- Hany Rahmanita (11170940000060)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Corona Virus Disease 2019 "
    ]
   },
