--- a/Kelompok_03_Statistika_Metode_Penelitian/Kelompok_03-Statistika_Literature_Review_Metode_Penelitian.ipynb
+++ b/Kelompok_03_Statistika_Metode_Penelitian/Kelompok_03-Statistika_Literature_Review_Metode_Penelitian.ipynb
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/Mind Map Covid-19 Kelompok 3 statistika.jpg\"/>"
+    "<img src=\"Mind Map Covid-19 Kelompok 3 statistika.jpg\"/>"
    ]
   },
   {
