--- a/Kelompok_03_Statistika_Metode_Penelitian/Kelompok_03-Statistika_Literature_Review_Metode_Penelitian.ipynb
+++ b/Kelompok_03_Statistika_Metode_Penelitian/Kelompok_03-Statistika_Literature_Review_Metode_Penelitian.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Tugas Mata Kuliah Metode Penelitian\n",
     "\n",
-    "## Kelompok 3 Statistik\n",
+    "## Kelompok 3 Statistika\n",
     "\n",
     "Nama Anggota:\n",
     "- Amirah Bonita (11170940000033)\n",
