--- a/Kelompok_05_Komputasi_Literature_Review_Metode_Penelitian.ipynb
+++ b/Kelompok_05_Komputasi_Literature_Review_Metode_Penelitian.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/Mind_Map_Covid_19_Kelompok_5_Komputasi.png\"/>"
+    "<img src=\"images/Mind Map Covid-19 Kelompok 5 Komputasi.png\"/>"
    ]
   },
   {
