--- a/Kelompok_03-Komputasi_Literature_Review_Metode_Penelitian.ipynb
+++ b/Kelompok_03-Komputasi_Literature_Review_Metode_Penelitian.ipynb
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/bagan.jpeg\">"
+    "<img src=\"images/bagan.png\">"
    ]
   },
   {
