--- a/Kelompok_03-Komputasi _Literature_Review_Metode_penelitian.ipynb
+++ b/Kelompok_03-Komputasi _Literature_Review_Metode_penelitian.ipynb
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/Mind Map Covid 19 kelompok 3 Komputasi.png\">"
+    "<img src=\"images/Mind map_covid19_kelompok_3_komputasi.png\">"
    ]
   },
   {
